--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,39 @@
 [package]
 name = "utils-rs"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = { version = "0.4.23", default-features = false }
-futures = { version = "0.3.25", default-features = false }
-lazy_static = "1.4.0"
-log = "0.4.17"
-rolling-file = "0.1.0"
-rust_decimal = { version = "1.27.0", default-features = false }
-serde = { version = "1.0.149", default-features = false, features = ["derive"] }
-serde_yaml = "0.9.14"
-sqlx = { version = "0.6.2", default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "decimal"] }
-thiserror = "1.0.37"
-time = { version = "0.3.17", default-features = false, features = ["macros"] }
-tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
-tracing = { version = "0.1.37", default-features = false }
-tracing-appender = "0.2.2"
-tracing-error = { version = "0.2.0", default-features = false }
+chrono = { version = "0.4.23", optional = true, default-features = false }
+futures = { version = "0.3.25", optional = true, default-features = false }
+lazy_static = { version = "1.4.0", optional = true, default-features = false }
+log = { version = "0.4.17", optional = true, default-features = false }
+rolling-file = { version = "0.1.0", optional = true, default-features = false }
+rust_decimal = { version = "1.27.0", optional = true, default-features = false }
+serde = { version = "1.0.149", optional = true, default-features = false, features = ["derive"] }
+serde_yaml = { version = "0.9.14", optional = true, default-features = false }
+sqlx = { version = "0.6.2", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "decimal"] }
+thiserror = { version = "1.0.37", optional = true, default-features = false }
+time = { version = "0.3.17", optional = true, default-features = false, features = ["macros"] }
+tokio = { version = "1.23.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
+tracing = { version = "0.1.37", optional = true, default-features = false }
+tracing-appender = { version = "0.2.2", optional = true, default-features = false }
+tracing-error = { version = "0.2.0", optional = true, default-features = false }
 # tracing-subscriber = { version = "0.3.11", default-features = false, features = ["tracing-log", "ansi", "local-time"] }
-tracing-subscriber = { version = "0.3.16", default-features = false, features = ["tracing-log", "ansi", "time"] }
-uuid = { version = "1.2.2", default-features = false, features = ["v4", "fast-rng"] }
+tracing-subscriber = { version = "0.3.16", optional = true, default-features = false, features = ["tracing-log", "ansi", "time"] }
+uuid = { version = "1.2.2", optional = true, default-features = false, features = ["v4", "fast-rng"] }
+
+[features]
+default = ["all"]
+all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog"]
+cell = []
+mysqlx = ["yaml", "lazy_static", "log", "serde", "sqlx", "thiserror", "tokio", "uuid"]
+mysqlx_batch = ["mysqlx"]
+qh = ["mysqlx_batch", "ymdhms", "futures", "lazy_static", "rust_decimal", "thiserror", "tokio", "tracing"]
+sizehmap = []
+timer = ["futures", "tokio"]
+ulog = ["rolling-file", "time", "tracing", "tracing-appender", "tracing-error", "tracing-subscriber"]
+yaml = ["serde", "serde_yaml", "thiserror", "tracing"]
+ymdhms = ["chrono"]
