--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,24 +6,24 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = { version = "0.4.23", optional = true, default-features = false }
-futures = { version = "0.3.25", optional = true, default-features = false }
+chrono = { version = "0.4.23", optional = true, default-features = false, features = ["std"] }
+futures = { version = "0.3.26", optional = true, default-features = false, features = ["std"] }
 lazy_static = { version = "1.4.0", optional = true, default-features = false }
-log = { version = "0.4.17", optional = true, default-features = false }
-rolling-file = { version = "0.1.0", optional = true, default-features = false }
-rust_decimal = { version = "1.27.0", optional = true, default-features = false }
-serde = { version = "1.0.152", optional = true, default-features = false, features = ["derive"] }
-serde_yaml = { version = "0.9.16", optional = true, default-features = false }
+log = { version = "0.4.17", optional = true, default-features = false, features = ["std"] }
+rolling-file = { version = "0.2.0", optional = true, default-features = false }
+rust_decimal = { version = "1.28.0", optional = true, default-features = false }
+serde = { version = "1.0.152", optional = true, default-features = false, features = ["derive", "std"] }
+serde_yaml = { version = "0.9.17", optional = true, default-features = false }
 sqlx = { version = "0.6.2", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "decimal"] }
 thiserror = { version = "1.0.38", optional = true, default-features = false }
-time = { version = "0.3.17", optional = true, default-features = false, features = ["macros"] }
-tokio = { version = "1.23.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
-tracing = { version = "0.1.37", optional = true, default-features = false }
+time = { version = "0.3.17", optional = true, default-features = false, features = ["macros", "std"] }
+tokio = { version = "1.25.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
+tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
 tracing-appender = { version = "0.2.2", optional = true, default-features = false }
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
 # tracing-subscriber = { version = "0.3.11", default-features = false, features = ["tracing-log", "ansi", "local-time"] }
-tracing-subscriber = { version = "0.3.16", optional = true, default-features = false, features = ["tracing-log", "ansi", "time"] }
-uuid = { version = "1.2.2", optional = true, default-features = false, features = ["v4", "fast-rng"] }
+tracing-subscriber = { version = "0.3.16", optional = true, default-features = false, features = ["tracing-log", "ansi", "time", "std"] }
+uuid = { version = "1.3.0", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
 
 [features]
 default = ["all"]
