--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
 chrono = { version = "0.4.26", optional = true, default-features = false, features = ["std"] }
 futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
 lazy_static = { version = "1.4.0", optional = true, default-features = false }
-log = { version = "0.4.18", optional = true, default-features = false, features = ["std"] }
+log = { version = "0.4.19", optional = true, default-features = false, features = ["std"] }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
-rust_decimal = { version = "1.29.1", optional = true, default-features = false }
+rust_decimal = { version = "1.30.0", optional = true, default-features = false }
 serde = { version = "1.0.164", optional = true, default-features = false, features = ["derive", "std"] }
 serde_yaml = { version = "0.9.21", optional = true, default-features = false }
 sqlx = { version = "0.6.3", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "decimal"] }
@@ -23,7 +24,7 @@ tracing-appender = { version = "0.2.2", optional = true, default-features = fals
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
 # tracing-subscriber = { version = "0.3.11", default-features = false, features = ["tracing-log", "ansi", "local-time"] }
 tracing-subscriber = { version = "0.3.17", optional = true, default-features = false, features = ["tracing-log", "ansi", "time", "std"] }
-uuid = { version = "1.3.3", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
+uuid = { version = "1.3.4", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
 
 [features]
 default = ["all"]
