--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "common-rs"
-version = "0.1.18"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,8 +9,10 @@ edition = "2021"
 anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
 chrono = { version = "0.4.26", optional = true, default-features = false, features = ["std"] }
 futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
+indicatif = "0.17.5"
 lazy_static = { version = "1.4.0", optional = true, default-features = false }
 log = { version = "0.4.19", optional = true, default-features = false, features = ["std"] }
+redis = { version = "0.23.0", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.30.0", optional = true, default-features = false }
 serde = { version = "1.0.164", optional = true, default-features = false, features = ["derive", "std"] }
@@ -28,7 +30,7 @@ uuid = { version = "1.3.4", optional = true, default-features = false, features 
 
 [features]
 default = ["all"]
-all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog", "hq"]
+all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog", "hq", "redis"]
 cell = []
 mysqlx = ["yaml", "lazy_static", "log", "serde", "sqlx", "thiserror", "tokio", "uuid"]
 mysqlx_batch = ["mysqlx"]
@@ -39,3 +41,4 @@ ulog = ["rolling-file", "time", "tracing", "tracing-appender", "tracing-error", 
 yaml = ["serde", "serde_yaml", "thiserror", "tracing"]
 ymdhms = ["chrono"]
 hq = ["chrono"]
+redis = ["dep:redis", "lazy_static", "yaml", "serde"]
