--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,14 @@ anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
 chrono = { version = "0.4.26", optional = true, default-features = false, features = ["std"] }
 futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
 indicatif = "0.17.5"
+itertools = "0.11.0"
 lazy_static = { version = "1.4.0", optional = true, default-features = false }
 log = { version = "0.4.19", optional = true, default-features = false, features = ["std"] }
 redis = { version = "0.23.0", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.30.0", optional = true, default-features = false }
 serde = { version = "1.0.164", optional = true, default-features = false, features = ["derive", "std"] }
-serde_yaml = { version = "0.9.21", optional = true, default-features = false }
+serde_yaml = { version = "0.9.22", optional = true, default-features = false }
 sqlx = { version = "0.6.3", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "decimal"] }
 thiserror = { version = "1.0.40", optional = true, default-features = false }
 time = { version = "0.3.22", optional = true, default-features = false, features = ["macros", "std"] }
@@ -40,5 +41,5 @@ timer = ["futures", "tokio"]
 ulog = ["rolling-file", "time", "tracing", "tracing-appender", "tracing-error", "tracing-subscriber"]
 yaml = ["serde", "serde_yaml", "thiserror", "tracing"]
 ymdhms = ["chrono"]
-hq = ["chrono"]
+hq = ["chrono", "mysqlx", "ymdhms"]
 redis = ["dep:redis", "lazy_static", "yaml", "serde"]
