--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "common-rs"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,9 +9,8 @@ edition = "2021"
 anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
 chrono = { version = "0.4.26", optional = true, default-features = false, features = ["std"] }
 futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
-indicatif = "0.17.5"
-itertools = "0.11.0"
-lazy_static = { version = "1.4.0", optional = true, default-features = false }
+indicatif = { version = "0.17.5", optional = true }
+itertools = { version = "0.11.0", optional = true }
 log = { version = "0.4.19", optional = true, default-features = false, features = ["std"] }
 redis = { version = "0.23.0", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
@@ -33,13 +32,13 @@ uuid = { version = "1.3.4", optional = true, default-features = false, features 
 default = ["all"]
 all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog", "hq", "redis"]
 cell = []
-mysqlx = ["yaml", "lazy_static", "log", "serde", "sqlx", "thiserror", "tokio", "uuid"]
+mysqlx = ["yaml", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "indicatif"]
 mysqlx_batch = ["mysqlx"]
-qh = ["mysqlx_batch", "ymdhms", "futures", "lazy_static", "rust_decimal", "thiserror", "tokio", "tracing"]
+qh = ["mysqlx_batch", "ymdhms", "futures", "rust_decimal", "thiserror", "tokio", "tracing"]
 sizehmap = []
 timer = ["futures", "tokio"]
 ulog = ["rolling-file", "time", "tracing", "tracing-appender", "tracing-error", "tracing-subscriber"]
 yaml = ["serde", "serde_yaml", "thiserror", "tracing"]
 ymdhms = ["chrono"]
-hq = ["chrono", "mysqlx", "ymdhms"]
-redis = ["dep:redis", "lazy_static", "yaml", "serde"]
+hq = ["chrono", "mysqlx", "ymdhms", "itertools"]
+redis = ["dep:redis", "yaml", "serde"]
