--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,13 @@ serde_yaml = { version = "0.9.22", optional = true, default-features = false }
 sqlx = { version = "0.6.3", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "decimal"] }
 thiserror = { version = "1.0.40", optional = true, default-features = false }
 time = { version = "0.3.22", optional = true, default-features = false, features = ["macros", "std"] }
-tokio = { version = "1.28.2", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.29.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
 tracing-appender = { version = "0.2.2", optional = true, default-features = false }
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
 # tracing-subscriber = { version = "0.3.11", default-features = false, features = ["tracing-log", "ansi", "local-time"] }
 tracing-subscriber = { version = "0.3.17", optional = true, default-features = false, features = ["tracing-log", "ansi", "time", "std"] }
-uuid = { version = "1.3.4", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
+uuid = { version = "1.4.0", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
 
 [features]
 default = ["all"]
@@ -40,5 +40,5 @@ timer = ["futures", "tokio"]
 ulog = ["rolling-file", "time", "tracing", "tracing-appender", "tracing-error", "tracing-subscriber"]
 yaml = ["serde", "serde_yaml", "thiserror", "tracing"]
 ymdhms = ["chrono"]
-hq = ["chrono", "mysqlx", "ymdhms", "itertools"]
+hq = ["chrono", "mysqlx", "ymdhms", "itertools", "rust_decimal"]
 redis = ["dep:redis", "yaml", "serde"]
