--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,12 @@ log = { version = "0.4.19", optional = true, default-features = false, features 
 redis = { version = "0.23.0", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.30.0", optional = true, default-features = false }
-serde = { version = "1.0.164", optional = true, default-features = false, features = ["derive", "std"] }
+serde = { version = "1.0.166", optional = true, default-features = false, features = ["derive", "std"] }
 serde_yaml = { version = "0.9.22", optional = true, default-features = false }
 sqlx = { version = "0.6.3", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "decimal"] }
 thiserror = { version = "1.0.40", optional = true, default-features = false }
 time = { version = "0.3.22", optional = true, default-features = false, features = ["macros", "std"] }
-tokio = { version = "1.29.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.29.1", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
 tracing-appender = { version = "0.2.2", optional = true, default-features = false }
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
@@ -40,5 +40,5 @@ timer = ["futures", "tokio"]
 ulog = ["rolling-file", "time", "tracing", "tracing-appender", "tracing-error", "tracing-subscriber"]
 yaml = ["serde", "serde_yaml", "thiserror", "tracing"]
 ymdhms = ["chrono"]
-hq = ["chrono", "mysqlx", "ymdhms", "itertools", "rust_decimal"]
+hq = ["chrono", "mysqlx", "ymdhms", "itertools", "rust_decimal", "futures"]
 redis = ["dep:redis", "yaml", "serde"]
