--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.30.0", optional = true, default-features = false }
 serde = { version = "1.0.166", optional = true, default-features = false, features = ["derive", "std"] }
 serde_yaml = { version = "0.9.22", optional = true, default-features = false }
-sqlx = { version = "0.6.3", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "decimal"] }
-thiserror = { version = "1.0.40", optional = true, default-features = false }
+sqlx = { version = "0.7.0", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
+thiserror = { version = "1.0.41", optional = true, default-features = false }
 time = { version = "0.3.22", optional = true, default-features = false, features = ["macros", "std"] }
 tokio = { version = "1.29.1", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
