--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,17 +15,17 @@ redis = { version = "0.23.0", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.30.0", optional = true, default-features = false }
 serde = { version = "1.0.171", optional = true, default-features = false, features = ["derive", "std"] }
-serde_yaml = { version = "0.9.22", optional = true, default-features = false }
-sqlx = { version = "0.7.0", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
+serde_yaml = { version = "0.9.24", optional = true, default-features = false }
+sqlx = { version = "0.7.1", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
 thiserror = { version = "1.0.43", optional = true, default-features = false }
 time = { version = "0.3.23", optional = true, default-features = false, features = ["macros", "std"] }
 tokio = { version = "1.29.1", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
-tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
+# tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
 tracing-appender = { version = "0.2.2", optional = true, default-features = false }
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
 # tracing-subscriber = { version = "0.3.11", default-features = false, features = ["tracing-log", "ansi", "local-time"] }
 tracing-subscriber = { version = "0.3.17", optional = true, default-features = false, features = ["tracing-log", "ansi", "time", "std"] }
-uuid = { version = "1.4.0", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
+uuid = { version = "1.4.1", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
 
 [features]
 default = ["all"]
@@ -33,11 +33,11 @@ all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog", "hq", "redis"]
 cell = []
 mysqlx = ["yaml", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "indicatif"]
 mysqlx_batch = ["mysqlx"]
-qh = ["mysqlx_batch", "ymdhms", "futures", "rust_decimal", "thiserror", "tokio", "tracing"]
+qh = ["mysqlx_batch", "ymdhms", "futures", "rust_decimal", "thiserror", "tokio"]
 sizehmap = []
 timer = ["futures", "tokio"]
-ulog = ["rolling-file", "time", "tracing", "tracing-appender", "tracing-error", "tracing-subscriber"]
-yaml = ["serde", "serde_yaml", "thiserror", "tracing"]
+ulog = ["rolling-file", "time", "tracing-appender", "tracing-error", "tracing-subscriber"]
+yaml = ["serde", "serde_yaml", "thiserror", "log"]
 ymdhms = ["chrono"]
 hq = ["chrono", "mysqlx", "ymdhms", "itertools", "rust_decimal", "futures"]
 redis = ["dep:redis", "yaml", "serde"]
