--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,18 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.26", optional = true, default-features = false, features = ["std"] }
-futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
+# futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
+futures-util = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
 indicatif = { version = "0.17.5", optional = true }
 itertools = { version = "0.11.0", optional = true }
 log = { version = "0.4.19", optional = true, default-features = false, features = ["std"] }
 redis = { version = "0.23.0", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.30.0", optional = true, default-features = false }
-serde = { version = "1.0.171", optional = true, default-features = false, features = ["derive", "std"] }
-serde_yaml = { version = "0.9.24", optional = true, default-features = false }
+serde = { version = "1.0.174", optional = true, default-features = false, features = ["derive", "std"] }
+serde_yaml = { version = "0.9.25", optional = true, default-features = false }
 sqlx = { version = "0.7.1", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
-thiserror = { version = "1.0.43", optional = true, default-features = false }
+thiserror = { version = "1.0.44", optional = true, default-features = false }
 time = { version = "0.3.23", optional = true, default-features = false, features = ["macros", "std"] }
 tokio = { version = "1.29.1", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
 # tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
@@ -33,11 +34,11 @@ all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog", "hq", "redis"]
 cell = []
 mysqlx = ["yaml", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "indicatif"]
 mysqlx_batch = ["mysqlx"]
-qh = ["mysqlx_batch", "ymdhms", "futures", "rust_decimal", "thiserror", "tokio"]
+qh = ["mysqlx_batch", "ymdhms", "futures-util", "rust_decimal", "thiserror", "tokio"]
 sizehmap = []
-timer = ["futures", "tokio"]
+timer = ["futures-util", "tokio"]
 ulog = ["rolling-file", "time", "tracing-appender", "tracing-error", "tracing-subscriber"]
 yaml = ["serde", "serde_yaml", "thiserror", "log"]
 ymdhms = ["chrono"]
-hq = ["chrono", "mysqlx", "ymdhms", "itertools", "rust_decimal", "futures"]
+hq = ["chrono", "mysqlx", "ymdhms", "itertools", "rust_decimal", "futures-util"]
 redis = ["dep:redis", "yaml", "serde"]
