--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ sqlx = { version = "0.7.1", optional = true, default-features = false, features 
 thiserror = { version = "1.0.44", optional = true, default-features = false }
 time = { version = "0.3.23", optional = true, default-features = false, features = ["macros", "std"] }
 tokio = { version = "1.29.1", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
-tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
+# tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
 tracing-appender = { version = "0.2.2", optional = true, default-features = false }
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
 # tracing-subscriber = { version = "0.3.11", default-features = false, features = ["tracing-log", "ansi", "local-time"] }
@@ -32,13 +32,13 @@ uuid = { version = "1.4.1", optional = true, default-features = false, features 
 default = ["all"]
 all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog", "hq", "redis"]
 cell = []
-mysqlx = ["yaml", "tracing", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "indicatif"]
+mysqlx = ["yaml", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "indicatif"]
 mysqlx_batch = ["mysqlx"]
 qh = ["mysqlx_batch", "ymdhms", "futures-util", "rust_decimal", "thiserror", "tokio"]
 sizehmap = []
 timer = ["futures-util", "tokio"]
 ulog = ["rolling-file", "time", "tracing-appender", "tracing-error", "tracing-subscriber"]
-yaml = ["serde", "serde_yaml", "thiserror", "tracing"]
+yaml = ["serde", "serde_yaml", "thiserror", "log"]
 ymdhms = ["chrono"]
 hq = ["chrono", "mysqlx", "ymdhms", "itertools", "rust_decimal", "futures-util"]
 redis = ["dep:redis", "yaml", "serde"]
