--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ uuid = { version = "1.4.1", optional = true, default-features = false, features 
 default = ["all"]
 all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog", "hq", "redis"]
 cell = []
-mysqlx = ["yaml", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "indicatif"]
+mysqlx = ["yaml", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "indicatif", "futures-util", "itertools", "chrono", "rust_decimal"]
 mysqlx_batch = ["mysqlx"]
 qh = ["mysqlx_batch", "ymdhms", "futures-util", "rust_decimal", "thiserror", "tokio"]
 sizehmap = []
@@ -40,5 +40,5 @@ timer = ["futures-util", "tokio"]
 ulog = ["rolling-file", "time", "tracing-appender", "tracing-error", "tracing-subscriber"]
 yaml = ["serde", "serde_yaml", "thiserror", "log"]
 ymdhms = ["chrono"]
-hq = ["chrono", "mysqlx", "ymdhms", "itertools", "rust_decimal", "futures-util"]
+hq = ["mysqlx", "ymdhms"]
 redis = ["dep:redis", "yaml", "serde"]
