--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,36 +1,39 @@
 [package]
 name = "common-rs"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 chrono = { version = "0.4.31", optional = true, default-features = false, features = ["std"] }
+color-eyre = "0.6.2"
+eyre = "0.6.8"
 # futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
-futures-util = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
+futures-util = { version = "0.3.29", optional = true, default-features = false, features = ["std"] }
 indicatif = { version = "0.17.7", optional = true }
 itertools = { version = "0.11.0", optional = true }
 log = { version = "0.4.20", optional = true, default-features = false, features = ["std"] }
 redis = { version = "0.23.3", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.32.0", optional = true, default-features = false }
-serde = { version = "1.0.189", optional = true, default-features = false, features = ["derive", "std"] }
-serde_yaml = { version = "0.9.25", optional = true, default-features = false }
+serde = { version = "1.0.192", optional = true, default-features = false, features = ["derive", "std"] }
+serde_yaml = { version = "0.9.27", optional = true, default-features = false }
 sqlx = { version = "0.7.2", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
+sysinfo = "0.29.10"
 thiserror = { version = "1.0.50", optional = true, default-features = false }
 time = { version = "0.3.30", optional = true, default-features = false, features = ["macros", "std"] }
-tokio = { version = "1.33.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.34.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
+toml = { version = "0.8.8", optional = true, default-features = false, features = ["parse"] }
 # tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
 tracing-appender = { version = "0.2.2", optional = true, default-features = false }
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
-# tracing-subscriber = { version = "0.3.11", default-features = false, features = ["tracing-log", "ansi", "local-time"] }
 tracing-subscriber = { version = "0.3.17", optional = true, default-features = false, features = ["tracing-log", "ansi", "time", "std"] }
 uuid = { version = "1.5.0", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
 
 [features]
 default = ["all"]
-all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog", "hq", "redis"]
+all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog", "hq", "redis", "utoml", "serde_extend"]
 cell = []
 mysqlx = ["yaml", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "indicatif", "futures-util", "itertools", "chrono", "rust_decimal"]
 mysqlx_batch = ["mysqlx"]
@@ -39,6 +42,8 @@ sizehmap = []
 timer = ["futures-util", "tokio"]
 ulog = ["rolling-file", "time", "tracing-appender", "tracing-error", "tracing-subscriber"]
 yaml = ["serde", "serde_yaml", "thiserror", "log"]
+utoml = ["serde", "toml", "thiserror", "log"]
 ymdhms = ["chrono"]
 hq = ["mysqlx", "ymdhms"]
 redis = ["dep:redis", "yaml", "serde"]
+serde_extend = ["chrono", "serde"]
