--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4.31", optional = true, default-features = false, features = ["std"] }
 color-eyre = "0.6.2"
-eyre = "0.6.8"
+eyre = "0.6.9"
 # futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
 futures-util = { version = "0.3.29", optional = true, default-features = false, features = ["std"] }
 indicatif = { version = "0.17.7", optional = true }
@@ -25,6 +25,7 @@ thiserror = { version = "1.0.50", optional = true, default-features = false }
 time = { version = "0.3.30", optional = true, default-features = false, features = ["macros", "std"] }
 tokio = { version = "1.34.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
 toml = { version = "0.8.8", optional = true, default-features = false, features = ["parse"] }
+tracing = { version = "0.1.40", optional = true }
 # tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
 tracing-appender = { version = "0.2.3", optional = true, default-features = false }
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
@@ -40,7 +41,7 @@ mysqlx_batch = ["mysqlx"]
 qh = ["mysqlx_batch", "ymdhms", "futures-util", "rust_decimal", "thiserror", "tokio"]
 sizehmap = []
 timer = ["futures-util", "tokio"]
-ulog = ["rolling-file", "time", "tracing-appender", "tracing-error", "tracing-subscriber"]
+ulog = ["rolling-file", "time", "tracing", "tracing-appender", "tracing-error", "tracing-subscriber"]
 yaml = ["serde", "serde_yaml", "thiserror", "log"]
 utoml = ["serde", "toml", "thiserror", "log"]
 ymdhms = ["chrono"]
