--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "common-rs"
-version = "0.2.4"
+version = "0.2.5"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,12 +11,12 @@ color-eyre = "0.6.2"
 eyre = "0.6.9"
 # futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
 futures-util = { version = "0.3.29", optional = true, default-features = false, features = ["std"] }
-indicatif = { version = "0.17.7", optional = true }
 itertools = { version = "0.12.0", optional = true }
 log = { version = "0.4.20", optional = true, default-features = false, features = ["std"] }
+number_prefix = "0.4.0"
 redis = { version = "0.23.3", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
-rust_decimal = { version = "1.33.1", optional = true, default-features = false }
+rust_decimal = { version = "1.33.1", default-features = false }
 serde = { version = "1.0.193", optional = true, default-features = false, features = ["derive", "std"] }
 serde_yaml = { version = "0.9.27", optional = true, default-features = false }
 sqlx = { version = "0.7.3", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
@@ -36,9 +36,9 @@ uuid = { version = "1.6.1", optional = true, default-features = false, features 
 default = ["all"]
 all = ["cell", "mysqlx_batch", "qh", "sizehmap", "timer", "ulog", "hq", "redis", "utoml", "serde_extend"]
 cell = []
-mysqlx = ["yaml", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "indicatif", "futures-util", "itertools", "chrono", "rust_decimal"]
+mysqlx = ["yaml", "log", "serde", "sqlx", "thiserror", "tokio", "uuid", "futures-util", "itertools", "chrono"]
 mysqlx_batch = ["mysqlx"]
-qh = ["mysqlx_batch", "ymdhms", "futures-util", "rust_decimal", "thiserror", "tokio"]
+qh = ["mysqlx_batch", "ymdhms", "futures-util", "thiserror", "tokio"]
 sizehmap = []
 timer = ["futures-util", "tokio"]
 ulog = ["rolling-file", "time", "tracing", "tracing-appender", "tracing-error", "tracing-subscriber"]
