--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,22 +8,22 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4.31", optional = true, default-features = false, features = ["std"] }
 color-eyre = "0.6.2"
-eyre = "0.6.9"
+eyre = "0.6.11"
 # futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
 futures-util = { version = "0.3.29", optional = true, default-features = false, features = ["std"] }
 itertools = { version = "0.12.0", optional = true }
 log = { version = "0.4.20", optional = true, default-features = false, features = ["std"] }
 number_prefix = "0.4.0"
-redis = { version = "0.23.3", default-features = false, optional = true }
+redis = { version = "0.24.0", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.33.1", default-features = false }
 serde = { version = "1.0.193", optional = true, default-features = false, features = ["derive", "std"] }
-serde_yaml = { version = "0.9.27", optional = true, default-features = false }
+serde_yaml = { version = "0.9.29", optional = true, default-features = false }
 sqlx = { version = "0.7.3", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
-sysinfo = "0.29.11"
-thiserror = { version = "1.0.50", optional = true, default-features = false }
-time = { version = "0.3.30", optional = true, default-features = false, features = ["macros", "std"] }
-tokio = { version = "1.34.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
+sysinfo = "0.30.0"
+thiserror = { version = "1.0.51", optional = true, default-features = false }
+time = { version = "0.3.31", optional = true, default-features = false, features = ["macros", "std", "parsing"] }
+tokio = { version = "1.35.1", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
 toml = { version = "0.8.8", optional = true, default-features = false, features = ["parse"] }
 tracing = { version = "0.1.40", optional = true }
 # tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
