--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "common-rs"
-version = "0.2.5"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4.35", optional = true, default-features = false, features = ["std"] }
 # color-eyre = "0.6.2"
-eyre = "0.6.12"
+eyre = { version = "0.6.12" }
 # futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
 futures-util = { version = "0.3.30", optional = true, default-features = false, features = ["std"] }
 itertools = { version = "0.12.1", optional = true }
