--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = { version = "0.4.35", optional = true, default-features = false, features = ["std"] }
+chrono = { version = "0.4.37", optional = true, default-features = false, features = ["std"] }
 dirs = { version = "5.0.1", optional = true }
 # color-eyre = "0.6.2"
 eyre = { version = "0.6.12" }
@@ -21,10 +21,10 @@ rust_decimal = { version = "1.35.0", optional = true, default-features = false }
 serde = { version = "1.0.197", optional = true, default-features = false, features = ["derive", "std"] }
 serde_yaml = { version = "0.9.34", optional = true, default-features = false }
 sqlx = { version = "0.7.4", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
-sysinfo = { version = "0.30.7", optional = true }
+sysinfo = { version = "0.30.8", optional = true }
 thiserror = { version = "1.0.58", optional = true, default-features = false }
 time = { version = "0.3.34", optional = true, default-features = false, features = ["macros", "std", "parsing"] }
-tokio = { version = "1.36.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.37.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
 toml = { version = "0.8.12", optional = true, default-features = false, features = ["parse"] }
 tracing = { version = "0.1.40", optional = true }
 # tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
@@ -43,8 +43,8 @@ qh = ["mysqlx-batch", "ymdhms", "dep:futures-util", "dep:thiserror", "dep:tokio"
 sizehmap = []
 timer = ["dep:futures-util", "dep:tokio"]
 tracing-init = ["dep:tracing", "dep:tracing-appender", "dep:tracing-error", "dep:tracing-subscriber", "dep:rolling-file", "dep:time"]
-yaml = ["dep:serde", "dep:serde_yaml", "dep:thiserror", "dep:log"]
-toml = ["dep:serde", "dep:toml", "dep:thiserror", "dep:log"]
+yaml = ["dep:serde", "dep:serde_yaml", "dep:thiserror", "dep:log", "path-plain"]
+toml = ["dep:serde", "dep:toml", "dep:thiserror", "dep:log", "path-plain"]
 ymdhms = ["dep:chrono"]
 hq = ["mysqlx", "ymdhms", "dep:rust_decimal"]
 redis = ["dep:redis", "yaml", "dep:serde"]
