--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "common-rs"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-channel = { version = "2.2.0", optional = true }
 chrono = { version = "0.4.37", optional = true, default-features = false, features = ["std"] }
 dirs = { version = "5.0.1", optional = true }
 # color-eyre = "0.6.2"
@@ -13,18 +14,20 @@ eyre = { version = "0.6.12" }
 # futures = { version = "0.3.28", optional = true, default-features = false, features = ["std"] }
 futures-util = { version = "0.3.30", optional = true, default-features = false, features = ["std"] }
 indexmap = { version = "2.2.6", optional = true, features = ["serde"] }
+indicatif = { version = "0.17.8", optional = true }
 itertools = { version = "0.12.1", optional = true }
 log = { version = "0.4.21", optional = true, default-features = false, features = ["std"] }
 number_prefix = { version = "0.4.0", optional = true }
+rand = { version = "0.8.5", optional = true }
 redis = { version = "0.25.3", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.35.0", optional = true, default-features = false }
 serde = { version = "1.0.197", optional = true, default-features = false, features = ["derive", "std"] }
 serde_yaml = { version = "0.9.34", optional = true, default-features = false }
 sqlx = { version = "0.7.4", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
-sysinfo = { version = "0.30.8", optional = true }
+sysinfo = { version = "0.30.9", optional = true }
 thiserror = { version = "1.0.58", optional = true, default-features = false }
-time = { version = "0.3.34", optional = true, default-features = false, features = ["macros", "std", "parsing"] }
+time = { version = "0.3.35", optional = true, default-features = false, features = ["macros", "std", "parsing"] }
 tokio = { version = "1.37.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
 toml = { version = "0.8.12", optional = true, default-features = false, features = ["parse"] }
 tracing = { version = "0.1.40", optional = true }
@@ -33,13 +36,15 @@ tracing-appender = { version = "0.2.3", optional = true, default-features = fals
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
 tracing-subscriber = { version = "0.3.18", optional = true, default-features = false, features = ["tracing-log", "ansi", "time", "std"] }
 uuid = { version = "1.8.0", optional = true, default-features = false, features = ["v4", "fast-rng", "std"] }
+zip = { version = "0.6.6", optional = true, default-features = false, features = ["deflate-zlib"] }
 
 [features]
 default = ["all"]
-all = ["cell", "sql", "mysqlx-batch", "qh", "sizehmap", "timer", "tracing-init", "hq", "redis", "toml", "serde-extend", "human", "running", "path-plain"]
+all = ["cell", "file", "sql-loader", "mysqlx-batch", "qh", "sizehmap", "timer", "tracing-init", "hq", "redis", "toml", "serde-extend", "human", "running", "path-plain", "progress-bar"]
 cell = []
-sql = ["toml", "serde-extend", "dep:indexmap", "dep:itertools"]
-mysqlx = ["yaml", "dep:log", "dep:serde", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:uuid", "dep:futures-util", "dep:itertools", "dep:chrono", "human"]
+file = ["dep:zip"]
+sql-loader = ["toml", "serde-extend", "dep:indexmap", "dep:itertools"]
+mysqlx = ["yaml", "dep:log", "dep:serde", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:uuid", "dep:futures-util", "dep:itertools", "dep:chrono", "dep:indicatif"]
 mysqlx-batch = ["mysqlx"]
 qh = ["mysqlx-batch", "ymdhms", "dep:futures-util", "dep:thiserror", "dep:tokio", "dep:rust_decimal"]
 sizehmap = []
@@ -51,6 +56,7 @@ ymdhms = ["dep:chrono"]
 hq = ["mysqlx", "ymdhms", "dep:rust_decimal"]
 redis = ["dep:redis", "yaml", "dep:serde"]
 serde-extend = ["dep:chrono", "dep:serde"]
-human = ["dep:number_prefix", "dep:rust_decimal"]
+human = ["dep:rust_decimal"]
 running = ["dep:sysinfo"]
 path-plain = ["dep:dirs"]
+progress-bar = ["dep:async-channel", "dep:indicatif", "dep:log", "dep:rand", "dep:tokio"]
