--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ all = ["cell", "file", "sql-loader", "mysqlx-batch", "qh", "sizehmap", "timer", 
 cell = []
 file = ["dep:zip"]
 sql-loader = ["toml", "serde-extend", "dep:indexmap", "dep:itertools"]
-mysqlx = ["yaml", "dep:log", "dep:serde", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:uuid", "dep:futures-util", "dep:itertools", "dep:chrono", "dep:indicatif"]
+mysqlx = ["yaml", "human", "dep:log", "dep:serde", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:uuid", "dep:futures-util", "dep:itertools", "dep:chrono"]
 mysqlx-batch = ["mysqlx", "dep:async-channel"]
 qh = ["mysqlx-batch", "ymdhms", "dep:futures-util", "dep:thiserror", "dep:tokio", "dep:rust_decimal"]
 sizehmap = []
