--- a/_data/db-conn.yaml
+++ b/_data/db-conn.yaml
@@ -1,4 +1,4 @@
-localdb:
+local-db:
   default: true
   host: 127.0.0.1
   port: 3306
@@ -7,22 +7,44 @@ localdb:
   database: mysql
   charset: utf8
   collation: utf8_general_ci
-  minConns: 2
-  maxConns: 20
-  idleTimeoutSecs: 10
-  acquireTimeoutSecs: 10
-  logSql: false
+  min-conns: 2
+  max-conns: 3
+  acquire-timeout-secs: 10
+  idle-timeout-secs: 60
+  log-sql: false
 
-localdb-2:
+ssh-db-password:
+  ssh-tunnel:
+    addr: 127.0.0.1:18822
+    user: root
+    auth: !password xxxxxx
   host: 127.0.0.1
   port: 3306
-  user: root
-  passwd: 12345678
+  user: EQ100002
+  passwd: dmh!100002
   database: mysql
   charset: utf8
   collation: utf8_general_ci
-  minConns: 2
-  maxConns: 20
-  idleTimeoutSecs: 10
-  acquireTimeoutSecs: 10
-  logSql: false
+  min-conns: 2
+  max-conns: 3
+  acquire-timeout-secs: 10
+  idle-timeout-secs: 60
+  log-sql: false
+
+ssh-db-key-pair:
+  ssh-tunnel:
+    addr: 127.0.0.1:18822
+    user: root
+    auth: !key-pair ~/.ssh/id_ed25519-work
+  host: 127.0.0.1
+  port: 3306
+  user: EQ100002
+  passwd: dmh!100002
+  database: mysql
+  charset: utf8
+  collation: utf8_general_ci
+  min-conns: 2
+  max-conns: 3
+  acquire-timeout-secs: 10
+  idle-timeout-secs: 60
+  log-sql: false
