--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,21 @@
 [package]
+edition = "2021"
 name = "common-rs"
 version = "0.5.3"
-edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-channel = { version = "2.2.1", optional = true }
-async-ssh2-lite = { version = "0.4.7", optional = true, features = ["tokio"] }
+async-channel = { version = "2.3.1", optional = true }
 chrono = { version = "0.4.38", optional = true, default-features = false, features = ["std"] }
 csv = { version = "1.3.0", default-features = false, optional = true }
 dirs = { version = "5.0.1", optional = true }
 # color-eyre = "0.6.2"
-eyre = { version = "0.6.12" }
+eyre = { version = "0.6.12", features = [] }
 futures-util = { version = "0.3.30", optional = true, default-features = false, features = ["std"] }
 indexmap = { version = "2.2.6", optional = true, features = ["serde"] }
 indicatif = { version = "0.17.8", optional = true }
-itertools = { version = "0.12.1", optional = true }
+itertools = { version = "0.13.0", optional = true }
 log = { version = "0.4.21", optional = true, default-features = false, features = ["std"] }
 memchr = { version = "2.7.2", optional = true }
 num-traits = { version = "0.2.19", optional = true }
@@ -27,50 +26,56 @@ rayon = { version = "1.10.0", default-features = false, optional = true }
 redis = { version = "0.25.3", default-features = false, optional = true }
 rolling-file = { version = "0.2.0", optional = true, default-features = false }
 rust_decimal = { version = "1.35.0", optional = true, default-features = false }
-serde = { version = "1.0.200", optional = true, default-features = false, features = ["derive", "std"] }
+serde = { version = "1.0.203", optional = true, default-features = false, features = ["derive", "std"] }
 serde_yaml = { version = "0.9.34", optional = true, default-features = false }
-sqlx = { version = "0.7.4", optional = true, default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
-sysinfo = { version = "0.30.11", optional = true }
-thiserror = { version = "1.0.59", optional = true, default-features = false }
-time = { version = "0.3.36", optional = true, default-features = false, features = ["macros", "std", "parsing"] }
+sqlx = { version = "0.7.4", optional = true, default-features = false, features = ["chrono", "macros", "mysql", "runtime-tokio-rustls", "rust_decimal"] }
+sysinfo = { version = "0.30.12", optional = true }
+thiserror = { version = "1.0.61", optional = true, default-features = false }
+time = { version = "0.3.36", optional = true, default-features = false, features = ["macros", "parsing", "std"] }
 tokio = { version = "1.37.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
-toml = { version = "0.8.12", optional = true, default-features = false, features = ["parse"] }
+toml = { version = "0.8.13", optional = true, default-features = false, features = ["parse"] }
 tracing = { version = "0.1.40", optional = true }
 # tracing = { version = "0.1.37", optional = true, default-features = false, features = ["std"] }
 tracing-appender = { version = "0.2.3", optional = true, default-features = false }
 tracing-error = { version = "0.2.0", optional = true, default-features = false }
-tracing-subscriber = { version = "0.3.18", optional = true, default-features = false, features = ["tracing-log", "ansi", "time", "std"] }
-uuid = { version = "1.8.0", optional = true, default-features = false, features = ["v7", "std", "fast-rng"] }
-zip = { version = "1.1.3", optional = true, default-features = false, features = ["deflate-zlib"] }
+tracing-subscriber = { version = "0.3.18", optional = true, default-features = false, features = ["ansi", "std", "time", "tracing-log"] }
+uuid = { version = "1.8.0", optional = true, default-features = false, features = ["fast-rng", "std", "v7"] }
+zip = { version = "2.1.0", optional = true, default-features = false, features = ["deflate-zlib"] }
+
+[target.'cfg(not(all(target_arch="x86_64", target_os="linux", target_env="musl")))'.dependencies]
+async-ssh2-lite = { version = "0.4.7", optional = true, features = ["tokio"] }
+
+[target.'cfg(all(target_arch="x86_64", target_os="linux", target_env="musl"))'.dependencies]
+async-ssh2-lite = { version = "0.4.7", optional = true, features = ["tokio", "vendored-openssl"] }
 
 [features]
 default = ["all"]
-all = ["cell", "csv-zip", "file", "sql-loader", "mysqlx-batch", "qh", "sizehmap", "timer", "tracing-init", "hq", "redis", "toml", "serde-extend", "human", "running", "path-plain", "progress-bar", "ssh"]
+all = ["cell", "csv-zip", "file", "hq", "human", "mysqlx-batch", "path-plain", "progress-bar", "qh", "redis", "running", "serde-extend", "sizehmap", "sql-loader", "ssh", "timer", "toml", "tracing-init"]
 cell = []
 csv = ["dep:csv", "dep:memchr", "dep:num-traits", "dep:once_cell", "dep:rayon"]
 csv-zip = ["csv", "dep:zip"]
 file = ["dep:zip"]
-sql-loader = ["toml", "serde-extend", "dep:indexmap", "dep:itertools"]
-mysqlx = ["human", "ssh", "toml", "yaml", "dep:log", "dep:serde", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:uuid", "dep:futures-util", "dep:itertools", "dep:chrono"]
-mysqlx-batch = ["mysqlx"]
-qh = ["mysqlx-batch", "ymdhms", "dep:futures-util", "dep:thiserror", "dep:tokio", "dep:rust_decimal"]
-sizehmap = []
-timer = ["dep:futures-util", "dep:tokio"]
-tracing-init = ["dep:tracing", "dep:tracing-appender", "dep:tracing-error", "dep:tracing-subscriber", "dep:rolling-file", "dep:time"]
-yaml = ["dep:serde", "dep:serde_yaml", "dep:thiserror", "dep:log", "path-plain"]
-toml = ["dep:serde", "dep:toml", "dep:thiserror", "dep:log", "path-plain"]
-ymdhms = ["dep:chrono"]
-hq = ["mysqlx", "ymdhms", "dep:rust_decimal"]
-redis = ["dep:redis", "yaml", "dep:serde"]
-serde-extend = ["dep:chrono", "dep:serde"]
+hq = ["dep:rust_decimal", "mysqlx", "ymdhms"]
 human = ["dep:rust_decimal"]
-running = ["dep:sysinfo"]
+mysqlx = ["dep:chrono", "dep:futures-util", "dep:itertools", "dep:log", "dep:serde", "dep:sqlx", "dep:thiserror", "dep:tokio", "dep:uuid", "human", "ssh", "toml", "yaml"]
+mysqlx-batch = ["mysqlx"]
 path-plain = ["dep:dirs"]
 progress-bar = ["dep:async-channel", "dep:indicatif", "dep:log", "dep:rand", "dep:tokio"]
-ssh = ["path-plain", "serde-extend", "dep:async-ssh2-lite", "dep:tokio"]
+qh = ["dep:futures-util", "dep:rust_decimal", "dep:thiserror", "dep:tokio", "mysqlx-batch", "ymdhms"]
+redis = ["dep:redis", "dep:serde", "yaml"]
+running = ["dep:sysinfo"]
+serde-extend = ["dep:chrono", "dep:serde"]
+sizehmap = []
+sql-loader = ["dep:indexmap", "dep:itertools", "serde-extend", "toml"]
+ssh = ["dep:async-ssh2-lite", "dep:tokio", "path-plain", "serde-extend"]
+timer = ["dep:futures-util", "dep:tokio"]
+toml = ["dep:log", "dep:serde", "dep:thiserror", "dep:toml", "path-plain"]
+tracing-init = ["dep:rolling-file", "dep:time", "dep:tracing", "dep:tracing-appender", "dep:tracing-error", "dep:tracing-subscriber"]
+yaml = ["dep:log", "dep:serde", "dep:serde_yaml", "dep:thiserror", "path-plain"]
+ymdhms = ["dep:chrono"]
 
 [dev-dependencies]
-tokio-stream = "0.1.15"
 indexmap = { version = "2.2.6", features = ["serde"] }
 serde_yaml = { version = "0.9.34" }
-toml = { version = "0.8.12" }
+tokio-stream = "0.1.15"
+toml = { version = "0.8.13" }
